# CHARLY-APPEALS-RESTORATIONCHARLY-Appeals-Mode-Restoration-

./: "charly_filing_assistant.py"   "filing_instructions_template.html"   .auto-commit.sh  .bandit  .bootstrap_hash  .charly-bulletproof.sh  .debug_test_file  .dockerignore  .flake8  .gcloudignore  .gitignore  .prettierignore  .prettierrc  API_CONTRACT.md  APPLE_FINAL_EXECUTION_PLAN.md  APPLE_FINAL_TASK_LIST.md  Add_Property_Hotfix_Proof.md  Auth_Patch_Proof.md  BOOTSTRAP.md  CHARLY_MASTER_PLAN.md  DATA_STORE_SPEC.md  DECISION_ENGINE_SPEC.md  Demo_Operator_Card.md  Demo_Ops_Smoke.md  Demo_Runbook.md  Demo_Smoke_Test.md  Dockerfile  Dockerfile.complex  Dockerfile.production  FILE_HANDLING_SPEC.md  FINAL_VALIDATED_COUNTY_SELECTION.json  FRONTEND_SPEC.md  Filter_Setter_Hotfix_Proof.md  Full_Dummy_CHARLY_Test_Data.csv  G4-PERFORMANCE-COMPLIANCE-REPORT.md  JURISDICTIONS_RULES.md  MASTER_HANDOFF_PROMPT.md  Makefile  OBSERVABILITY.md  PERFORMANCE_AGENT_SUMMARY.md  (+179 more)
.lighthouseci/: flags-7e549880-27a0-4491-b728-cd0ff7fac2ec.json
.storybook/: main.ts  preview.ts
__tests__/: PropertyFields.test.tsx  basic.test.tsx  enterprise-validation.test.tsx  msw-integration.test.tsx  production-demo.test.tsx  simple-login.test.tsx  working-login.test.tsx
archive-failed-attempts/: AIAnalysisProgress.tsx  AccessibleButton.tsx  AdvancedReporting.tsx  AnalystValuationWorkbench.tsx  Appeals-Backup.tsx  Appeals.tsx  AttorneyExecutiveDashboard.tsx  AutomatedFiling.tsx  BulkOperations.tsx  BusinessIntelligenceDashboard.tsx  CommercialPropertyAnalysis.tsx  CrossBrowserCompatibility.tsx  Filing.tsx  (+23 more)
(+877 files in other folders)
