[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charly"
version = "1.0.0"
description = "CHARLY Property Tax Assessment Platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pytest>=7.0.0",
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "jinja2>=3.1.0",
    "pdfkit>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "cryptography>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "bandit>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["charly*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--maxfail=1 --disable-warnings -q"